# EENG-462-Lab-4-ROS2-mapping-maze

./: README.md  frames_2026-03-05_10.39.25.gv  frames_2026-03-11_13.47.56.gv
install/: local_setup.sh  setup.sh
install/lio_sam/share/lio_sam/: package.bash  package.zsh
install/mecanum_robot/lib/mecanum_robot/: mecanum_robot
install/mecanum_robot/share/mecanum_robot/: package.dsv  package.ps1  package.sh  package.xml
install/openslam_gmapping/share/openslam_gmapping/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/slam_gmapping/lib/slam_gmapping/: slam_gmapping
install/slam_gmapping/share/slam_gmapping/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/slam_toolbox/include/karto_sdk/: Karto.h  Macros.h  Mapper.h  Math.h  Types.h  nanoflann.hpp  nanoflann_adaptors.h
install/slam_toolbox/include/slam_toolbox/: get_pose_helper.hpp  laser_utils.hpp  loop_closure_assistant.hpp  map_saver.hpp  merge_maps_kinematic.hpp  serialization.hpp  slam_mapper.hpp  (+8 more)
install/slam_toolbox/share/: solver_plugins.xml
log/: latest_build
src/mecanum_robot/: package.xml  setup.py
src/mecanum_robot/launch/: mecanum_robot_launch.py  mecanum_robot_launch.xml
src/mecanum_robot/mecanum_robot/: mecanum_robot.py
src/mecanum_robot/urdf/: mecanum_robot.urdf
(+365 files in other folders)
