<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_robot</name>
  <version>0.0.0</version>
  <description>Mecanum robot control package</description>
  <maintainer email="eolsen11@ewu.edu">rob1</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
